# CodeAtlas

./: .gitignore  README.md
C/: README.md  hello.c
CPP/: README.md
C_Lang/: README.md  add_num  hello  math_op.cpp
Decorators/: property.py  timer.py
Docker/: Complete_Guide_to_Docker_Images_Containers_Storage_Volumes_and_Users.md  Creating_a_Custom_Rust_Development_Docker_Image_Updated.md  Docker_Container_Data_Persistence.md  Dockerfile  README.md  Understanding_Docker_Storage_and_Persistence.md  compose.yml
Docker/.cache/matplotlib/: fontlist-v330.json
Docker/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Docker/.ipython/profile_default/: history.sqlite
Docker/.jupyter/: migrated
Docker/.jupyter/lab/workspaces/: default-37a8.jupyterlab-workspace
Docker/.local/share/jupyter/: nbsignatures.db  notebook_secret
Docker/.local/share/jupyter/runtime/: jupyter_cookie_secret
Docker/rust-docker/: Dockerfile
Docker/test-cli/: .dockerignore  Dockerfile  pyproject.toml
Docker/test-cli/src/plot_maths/: cli.py
Lua/: README.md  game.lua  intro.lua
Python/Decorators/: classmethod.py  dataclass.py  staticmethod.py
Python/Dunder/: README.md  str_repr.py
Python_Tutorial/: README.md
Python_Tutorial/Decorators/: functools.py
Python_Tutorial/Dunder/: add_dunder.py  simple_example.py
Python_Tutorial/OOP/: 01_classes.ipynb
Rust/: README.md
Rust/my_rust_module/: Cargo.toml  README.md  pyproject.toml  test.ipynb  test.py
Rust/my_rust_module/src/: lib.rs
Rust/projects/src/: main.rs
(+1 files in other folders)
