[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plot-maths"
version = "0.1.0"
description = "Simple CLI for plotting maths"
authors = [{ name = "Your Name" }]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib"
]

[project.scripts]
plot-maths = "plot_maths.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
